--- a/content/portfolio/project-1.rmd
+++ b/content/portfolio/project-1.rmd
@@ -1,8 +1,8 @@
 ---
 title: "Opinion Polls for 2021 German Elections"
 date: 2019-05-12T12:14:34+06:00
-image: "/Users/thomasgiannetti/my_website/static/img/im05.jpg"
-client: "John Doe"
+image: "im05.jpg"
+#client: "John Doe"
 project_url : "https://themefisher.com/"
 categories: ["design","development"]
 description: "R Project."
